--- a/ci/prow/config.yaml
+++ b/ci/prow/config.yaml
@@ -630,6 +630,7 @@ presubmits:
     rerun_command: "/test pull-knative-serving-istio-1.1-mesh"
     trigger: "(?m)^/test (all|pull-knative-serving-istio-1.1-mesh),?(\\s+|$)"
     decorate: true
+    optional: true
     branches:
     - "release-0.4"
     - "release-0.5"
@@ -666,6 +667,7 @@ presubmits:
     rerun_command: "/test pull-knative-serving-istio-1.1-mesh"
     trigger: "(?m)^/test (all|pull-knative-serving-istio-1.1-mesh),?(\\s+|$)"
     decorate: true
+    optional: true
     path_alias: knative.dev/serving
     skip_branches:
     - "release-0.4"
@@ -703,6 +705,7 @@ presubmits:
     rerun_command: "/test pull-knative-serving-istio-1.1-no-mesh"
     trigger: "(?m)^/test (all|pull-knative-serving-istio-1.1-no-mesh),?(\\s+|$)"
     decorate: true
+    optional: true
     branches:
     - "release-0.4"
     - "release-0.5"
@@ -739,6 +742,7 @@ presubmits:
     rerun_command: "/test pull-knative-serving-istio-1.1-no-mesh"
     trigger: "(?m)^/test (all|pull-knative-serving-istio-1.1-no-mesh),?(\\s+|$)"
     decorate: true
+    optional: true
     path_alias: knative.dev/serving
     skip_branches:
     - "release-0.4"
@@ -776,6 +780,7 @@ presubmits:
     rerun_command: "/test pull-knative-serving-istio-1.2-mesh"
     trigger: "(?m)^/test (all|pull-knative-serving-istio-1.2-mesh),?(\\s+|$)"
     decorate: true
+    optional: true
     branches:
     - "release-0.4"
     - "release-0.5"
@@ -812,6 +817,7 @@ presubmits:
     rerun_command: "/test pull-knative-serving-istio-1.2-mesh"
     trigger: "(?m)^/test (all|pull-knative-serving-istio-1.2-mesh),?(\\s+|$)"
     decorate: true
+    optional: true
     path_alias: knative.dev/serving
     skip_branches:
     - "release-0.4"
@@ -849,6 +855,7 @@ presubmits:
     rerun_command: "/test pull-knative-serving-istio-1.2-no-mesh"
     trigger: "(?m)^/test (all|pull-knative-serving-istio-1.2-no-mesh),?(\\s+|$)"
     decorate: true
+    optional: true
     branches:
     - "release-0.4"
     - "release-0.5"
@@ -885,6 +892,7 @@ presubmits:
     rerun_command: "/test pull-knative-serving-istio-1.2-no-mesh"
     trigger: "(?m)^/test (all|pull-knative-serving-istio-1.2-no-mesh),?(\\s+|$)"
     decorate: true
+    optional: true
     path_alias: knative.dev/serving
     skip_branches:
     - "release-0.4"
@@ -922,6 +930,7 @@ presubmits:
     rerun_command: "/test pull-knative-serving-gloo-0.17.1"
     trigger: "(?m)^/test (all|pull-knative-serving-gloo-0.17.1),?(\\s+|$)"
     decorate: true
+    optional: true
     branches:
     - "release-0.4"
     - "release-0.5"
@@ -957,6 +966,7 @@ presubmits:
     rerun_command: "/test pull-knative-serving-gloo-0.17.1"
     trigger: "(?m)^/test (all|pull-knative-serving-gloo-0.17.1),?(\\s+|$)"
     decorate: true
+    optional: true
     path_alias: knative.dev/serving
     skip_branches:
     - "release-0.4"
