--- a/ci/prow/config_knative.yaml
+++ b/ci/prow/config_knative.yaml
@@ -46,18 +46,23 @@ presubmits:
       - "./test/performance-tests.sh"
     - custom-test: istio-1.1-mesh
       always_run: false
+      optional: true
       full-command: "./test/e2e-tests.sh --istio-version 1.1-latest --mesh"
     - custom-test: istio-1.1-no-mesh
       always_run: false
+      optional: true
       full-command: "./test/e2e-tests.sh --istio-version 1.1-latest --no-mesh"
     - custom-test: istio-1.2-mesh
       always_run: false
+      optional: true
       full-command: "./test/e2e-tests.sh --istio-version 1.2-latest --mesh"
     - custom-test: istio-1.2-no-mesh
       always_run: false
+      optional: true
       full-command: "./test/e2e-tests.sh --istio-version 1.2-latest --no-mesh"
     - custom-test: gloo-0.17.1
       always_run: false
+      optional: true
       full-command: "./test/e2e-tests.sh --gloo-version 0.17.1"
 
   knative/build:
