--- a/ci/prow/config_knative.yaml
+++ b/ci/prow/config_knative.yaml
@@ -189,6 +189,8 @@ periodics:
       release: "0.6"
     - branch-ci: true
       release: "0.7"
+    - branch-ci: true
+      release: "0.8"
     - custom-job: istio-1.1-mesh
       full-command: "./test/e2e-tests.sh --istio-version 1.1-latest --mesh"
       dot-dev: true
@@ -256,6 +258,8 @@ periodics:
       release: "0.6"
     - branch-ci: true
       release: "0.7"
+    - branch-ci: true
+      release: "0.8"
     - nightly: true
       dot-dev: true
     - dot-release: true
@@ -274,6 +278,8 @@ periodics:
       release: "0.6"
     - branch-ci: true
       release: "0.7"
+    - branch-ci: true
+      release: "0.8"
     - nightly: true
       dot-dev: true
     - dot-release: true
