--- a/ci/prow/templates/prow_config_header.yaml
+++ b/ci/prow/templates/prow_config_header.yaml
@@ -71,6 +71,9 @@ branch-protection:
       protect: true
       # Admins can overrule checks
       enforce_admins: false
+    google:
+      protect: true
+      enforce_admins: false
 
 tide:
   queries:
@@ -100,7 +103,7 @@ tide:
     - do-not-merge/invalid-owners-file
   merge_method:
     knative: squash
-    google: squash
+    google/knative-gcp: squash
   target_url: https://prow.knative.dev/tide
   pr_status_base_url: https://prow.knative.dev/pr
   blocker_label: tide/merge-blocker
