--- a/ci/prow/config.yaml
+++ b/ci/prow/config.yaml
@@ -5605,6 +5605,7 @@ periodics:
       - "--github-account=/etc/flaky-test-reporter-github-token/token"
       - "--slack-account=/etc/flaky-test-reporter-slack-token/token"
       - "--skip-report"
+      - "--build-count=20"
       volumeMounts:
       - name: test-account
         mountPath: /etc/test-account
