Scans flaky tests for test-infra so retryer can help test-infra as well

--- a/tools/flaky-test-reporter/config.yaml
+++ b/tools/flaky-test-reporter/config.yaml
@@ -44,3 +44,6 @@ jobConfigs:
     slackChannels:
       - name: networking
         identity: CA9RHBGJX
+  - name: ci-knative-test-infra-continuous
+    repo: test-infra
+    type: postsubmit
