--- a/ci/prow/templates/prow_periodic_test_job.yaml
+++ b/ci/prow/templates/prow_periodic_test_job.yaml
@@ -17,4 +17,5 @@
       [[indent_section 8 "securityContext" .Base.SecurityContext]]
       [[indent_section 6 "volumeMounts" .Base.VolumeMounts]]
       [[indent_section 6 "env" .Base.Env]]
+      [[indent_section 6 "resources" .Base.Resources]]
     [[indent_section 4 "volumes" .Base.Volumes]]
