expanding boskos to 75

--- a/ci/prow/boskos/resources.yaml
+++ b/ci/prow/boskos/resources.yaml
@@ -84,5 +84,10 @@ resources:
   - knative-boskos-68
   - knative-boskos-69
   - knative-boskos-70
+  - knative-boskos-71
+  - knative-boskos-72
+  - knative-boskos-73
+  - knative-boskos-74
+  - knative-boskos-75
   state: dirty
   type: gke-project
