--- a/images/flaky-test-reporter/Makefile
+++ b/images/flaky-test-reporter/Makefile
@@ -13,7 +13,10 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-IMG = gcr.io/knative-tests/test-infra/flaky-test-reporter
+REGISTRY ?= gcr.io
+PROJECT  ?= knative-tests
+
+IMG = $(REGISTRY)/$(PROJECT)/test-infra/flaky-test-reporter
 TAG := $(shell date +v%Y%m%d)-$(shell git describe --always --dirty --match '^$$')
 
 all: build
