--- a/images/monitoring/Makefile
+++ b/images/monitoring/Makefile
@@ -12,7 +12,10 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-IMG = gcr.io/knative-tests/test-infra/monitoring
+REGISTRY ?= gcr.io
+PROJECT  ?= knative-tests
+
+IMG = $(REGISTRY)/$(PROJECT)/test-infra/monitoring
 TAG := $(shell date +v%Y%m%d)-$(shell git describe --always --dirty --match '^$$')
 
 all: build
