--- a/images/prow-auto-bumper/Makefile
+++ b/images/prow-auto-bumper/Makefile
@@ -1,4 +1,3 @@
-
 # Copyright 2019 The Knative Authors
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
@@ -13,7 +12,10 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-IMG = gcr.io/knative-tests/test-infra/prow-auto-bumper
+REGISTRY ?= gcr.io
+PROJECT  ?= knative-tests
+
+IMG = $(REGISTRY)/$(PROJECT)/test-infra/prow-auto-bumper
 TAG := $(shell date +v%Y%m%d)-$(shell git describe --always --dirty --match '^$$')
 
 all: build
