Refactor common Makefile rules into a shared file
Simpler, consistent rules for everyone.

Bonus cleanup: remove the images/apicoverage dir, as the tool was already removed.

--- a/ci/prow/config.yaml
+++ b/ci/prow/config.yaml
@@ -549,7 +549,7 @@ presubmits:
     - "release-0.7"
     spec:
       containers:
-      - image: gcr.io/knative-tests/test-infra/coverage-dev:latest-dev
+      - image: gcr.io/knative-tests/test-infra/coverage-dev:latest
         imagePullPolicy: Always
         command:
         - "/coverage"
@@ -5929,7 +5929,7 @@ postsubmits:
     path_alias: knative.dev/serving
     spec:
       containers:
-      - image: gcr.io/knative-tests/test-infra/coverage-dev:latest-dev
+      - image: gcr.io/knative-tests/test-infra/coverage-dev:latest
         imagePullPolicy: Always
         command:
         - "/coverage"
