--- a/images/backups/Makefile
+++ b/images/backups/Makefile
@@ -1,4 +1,4 @@
-# Copyright 2018 The Knative Authors
+# Copyright 2019 The Knative Authors
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -12,22 +12,5 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-REGISTRY ?= gcr.io
-PROJECT  ?= knative-tests
-
-IMG = $(REGISTRY)/$(PROJECT)/test-infra/backups
-TAG := $(shell date +v%Y%m%d)-$(shell git describe --always --dirty --match '^$$')
-
-all: build
-
-build:
-	docker build -t $(IMG):$(TAG) -f Dockerfile .
-	docker tag $(IMG):$(TAG) $(IMG):latest
-
-push_versioned: build
-	docker push $(IMG):$(TAG)
-
-push_latest: build
-	docker push $(IMG):latest
-
-push: push_versioned push_latest
+IMAGE_NAME = backups
+include ../../shared/Makefile.simple-image
