Added monitoring for code coverage post-submit
`go test -coverprofile` returns a non-zero return code if any of the unit test fails.
While occasional such failure may be caused by flakiness, consistent failures in post-submit workflow of code coverage is likely caused by bad configuration or running environment. We want to be able to monitor on these failures with pre-set thresholds.
1. make post-submit job fail at the end, if the `go test` has a non-zero return code
2. Add the error pattern to monitoring so that alert will be sent if threshold is met

--- a/tools/monitoring/config/config.yaml
+++ b/tools/monitoring/config/config.yaml
@@ -161,3 +161,14 @@ spec:
         jobs-affected: 1
         prs-affected: 0
         period: 1440
+
+  - error-pattern: "Error running 'go test -coverprofile '"
+    hint: 'Check build file and see why go test failed. Continuous failure of this test will cause
+    outdated comparison base for pre-submit code coverage check.'
+    alerts:
+      - job-name-regex: 'post.*'
+        occurrences: 2
+        jobs-affected: 1
+        prs-affected: 0
+        period: 1440
+
