--- a/ci/prow/config.yaml
+++ b/ci/prow/config.yaml
@@ -5904,6 +5904,78 @@ periodics:
     - name: performance-test
       secret:
         secretName: performance-test
+- cron: "30 07 * * *"
+  name: ci-knative-eventing-recreate-clusters
+  agent: kubernetes
+  decorate: true
+  extra_refs:
+  - org: knative
+    repo: eventing
+    base_ref: master
+    path_alias: knative.dev/eventing
+  spec:
+    containers:
+    - image: gcr.io/knative-tests/test-infra/prow-tests:stable
+      imagePullPolicy: Always
+      command:
+      - runner.sh
+      args:
+      - "./test/performance/tools/recreate_clusters.sh"
+      volumeMounts:
+      - name: test-account
+        mountPath: /etc/test-account
+        readOnly: true
+      - name: eventing-performance-test
+        mountPath: /etc/performance-test
+        readOnly: true
+      env:
+      - name: GOOGLE_APPLICATION_CREDENTIALS
+        value: /etc/test-account/service-account.json
+      - name: PERF_TEST_GOOGLE_APPLICATION_CREDENTIALS
+        value: /etc/performance-test/service-account.json
+    volumes:
+    - name: test-account
+      secret:
+        secretName: test-account
+    - name: eventing-performance-test
+      secret:
+        secretName: eventing-performance-test
+- cron: "5 * * * *"
+  name: ci-knative-eventing-update-clusters
+  agent: kubernetes
+  decorate: true
+  extra_refs:
+  - org: knative
+    repo: eventing
+    base_ref: master
+    path_alias: knative.dev/eventing
+  spec:
+    containers:
+    - image: gcr.io/knative-tests/test-infra/prow-tests:stable
+      imagePullPolicy: Always
+      command:
+      - runner.sh
+      args:
+      - "./test/performance/tools/update_clusters.sh"
+      volumeMounts:
+      - name: test-account
+        mountPath: /etc/test-account
+        readOnly: true
+      - name: eventing-performance-test
+        mountPath: /etc/performance-test
+        readOnly: true
+      env:
+      - name: GOOGLE_APPLICATION_CREDENTIALS
+        value: /etc/test-account/service-account.json
+      - name: PERF_TEST_GOOGLE_APPLICATION_CREDENTIALS
+        value: /etc/performance-test/service-account.json
+    volumes:
+    - name: test-account
+      secret:
+        secretName: test-account
+    - name: eventing-performance-test
+      secret:
+        secretName: eventing-performance-test
 postsubmits:
   knative/serving:
   - name: post-knative-serving-go-coverage
