--- a/ci/gubernator/config.yaml
+++ b/ci/gubernator/config.yaml
@@ -57,6 +57,9 @@ jobs:
   - pull-knative-serving-operator-unit-tests
   - pull-knative-serving-operator-build-tests
   - pull-knative-serving-operator-integration-tests
+  - pull-knative-eventing-operator-unit-tests
+  - pull-knative-eventing-operator-build-tests
+  - pull-knative-eventing-operator-integration-tests
   knative-prow/logs/:
   - ci-knative-serving-continuous
   - ci-knative-serving-0.4-continuous
