--- a/ci/testgrid/config.yaml
+++ b/ci/testgrid/config.yaml
@@ -227,6 +227,22 @@ test_groups:
   gcs_prefix: knative-prow/logs/ci-knative-serving-operator-go-coverage
   num_failures_to_alert: 9999
   short_text_metric: "coverage"
+- name: ci-knative-eventing-operator-continuous
+  gcs_prefix: knative-prow/logs/ci-knative-eventing-operator-continuous
+  alert_stale_results_hours: 3
+  num_failures_to_alert: 3
+- name: ci-knative-eventing-operator-nightly-release
+  gcs_prefix: knative-prow/logs/ci-knative-eventing-operator-nightly-release
+- name: ci-knative-eventing-operator-dot-release
+  gcs_prefix: knative-prow/logs/ci-knative-eventing-operator-dot-release
+  alert_stale_results_hours: 170
+- name: ci-knative-eventing-operator-auto-release
+  gcs_prefix: knative-prow/logs/ci-knative-eventing-operator-auto-release
+  alert_stale_results_hours: 3
+- name: pull-knative-eventing-operator-test-coverage
+  gcs_prefix: knative-prow/logs/ci-knative-eventing-operator-go-coverage
+  num_failures_to_alert: 9999
+  short_text_metric: "coverage"
 - name: ci-knative-serving-0.4-continuous
   gcs_prefix: knative-prow/logs/ci-knative-serving-0.4-continuous
 - name: ci-knative-serving-0.5-continuous
@@ -457,6 +473,23 @@ dashboards:
   - name: coverage
     test_group_name: pull-knative-serving-operator-test-coverage
     base_options: "exclude-filter-by-regex=Overall$&group-by-directory=&expand-groups=&sort-by-name="
+- name: eventing-operator
+  dashboard_tab:
+  - name: continuous
+    test_group_name: ci-knative-eventing-operator-continuous
+    base_options: "sort-by-name="
+  - name: nightly
+    test_group_name: ci-knative-eventing-operator-nightly-release
+    base_options: "sort-by-name="
+  - name: dot-release
+    test_group_name: ci-knative-eventing-operator-dot-release
+    base_options: "sort-by-name="
+  - name: auto-release
+    test_group_name: ci-knative-eventing-operator-auto-release
+    base_options: "sort-by-name="
+  - name: coverage
+    test_group_name: pull-knative-eventing-operator-test-coverage
+    base_options: "exclude-filter-by-regex=Overall$&group-by-directory=&expand-groups=&sort-by-name="
 - name: knative-gcp
   dashboard_tab:
   - name: continuous
@@ -548,6 +581,7 @@ dashboard_groups:
   - "sample-controller"
   - "test-infra"
   - "serving-operator"
+  - "eventing-operator"
 - name: google
   dashboard_names:
   - "knative-gcp"
