remove all invalid permissions

--- a/ci/prow/boskos/custom_role.yaml
+++ b/ci/prow/boskos/custom_role.yaml
@@ -5,33 +5,6 @@ includedPermissions:
 - accessapproval.requests.get
 - accessapproval.requests.list
 - accessapproval.settings.get
-- accesscontextmanager.accessLevels.create
-- accesscontextmanager.accessLevels.delete
-- accesscontextmanager.accessLevels.get
-- accesscontextmanager.accessLevels.list
-- accesscontextmanager.accessLevels.update
-- accesscontextmanager.accessPolicies.create
-- accesscontextmanager.accessPolicies.delete
-- accesscontextmanager.accessPolicies.get
-- accesscontextmanager.accessPolicies.getIamPolicy
-- accesscontextmanager.accessPolicies.list
-- accesscontextmanager.accessPolicies.update
-- accesscontextmanager.accessZones.create
-- accesscontextmanager.accessZones.delete
-- accesscontextmanager.accessZones.get
-- accesscontextmanager.accessZones.list
-- accesscontextmanager.accessZones.update
-- accesscontextmanager.policies.create
-- accesscontextmanager.policies.delete
-- accesscontextmanager.policies.get
-- accesscontextmanager.policies.getIamPolicy
-- accesscontextmanager.policies.list
-- accesscontextmanager.policies.update
-- accesscontextmanager.servicePerimeters.create
-- accesscontextmanager.servicePerimeters.delete
-- accesscontextmanager.servicePerimeters.get
-- accesscontextmanager.servicePerimeters.list
-- accesscontextmanager.servicePerimeters.update
 - androidmanagement.enterprises.manage
 - appengine.applications.get
 - appengine.applications.update
@@ -46,7 +19,6 @@ includedPermissions:
 - appengine.memcache.update
 - appengine.operations.get
 - appengine.operations.list
-- appengine.runtimes.actAsAdmin
 - appengine.services.delete
 - appengine.services.get
 - appengine.services.list
@@ -296,17 +268,6 @@ includedPermissions:
 - cloudmessaging.messages.create
 - cloudnotifications.activities.list
 - cloudprivatecatalog.targets.get
-- cloudprivatecatalogproducer.associations.create
-- cloudprivatecatalogproducer.associations.delete
-- cloudprivatecatalogproducer.associations.get
-- cloudprivatecatalogproducer.associations.list
-- cloudprivatecatalogproducer.catalogs.create
-- cloudprivatecatalogproducer.catalogs.delete
-- cloudprivatecatalogproducer.catalogs.get
-- cloudprivatecatalogproducer.catalogs.getIamPolicy
-- cloudprivatecatalogproducer.catalogs.list
-- cloudprivatecatalogproducer.catalogs.undelete
-- cloudprivatecatalogproducer.catalogs.update
 - cloudprivatecatalogproducer.targets.associate
 - cloudprivatecatalogproducer.targets.unassociate
 - cloudprofiler.profiles.create
@@ -367,7 +328,6 @@ includedPermissions:
 - cloudsql.instances.truncateLog
 - cloudsql.instances.update
 - cloudsql.sslCerts.create
-- cloudsql.sslCerts.createEphemeral
 - cloudsql.sslCerts.delete
 - cloudsql.sslCerts.get
 - cloudsql.sslCerts.list
@@ -375,13 +335,6 @@ includedPermissions:
 - cloudsql.users.delete
 - cloudsql.users.list
 - cloudsql.users.update
-- cloudsupport.accounts.get
-- cloudsupport.accounts.getIamPolicy
-- cloudsupport.accounts.getUserRoles
-- cloudsupport.accounts.list
-- cloudsupport.accounts.update
-- cloudsupport.accounts.updateUserRoles
-- cloudsupport.operations.get
 - cloudtasks.locations.get
 - cloudtasks.locations.list
 - cloudtasks.queues.create
@@ -1215,28 +1168,6 @@ includedPermissions:
 - dataproc.workflowTemplates.instantiateInline
 - dataproc.workflowTemplates.list
 - dataproc.workflowTemplates.update
-- dataprocessing.featurecontrols.get
-- dataprocessing.featurecontrols.list
-- datastore.databases.get
-- datastore.databases.getIamPolicy
-- datastore.databases.list
-- datastore.databases.update
-- datastore.entities.allocateIds
-- datastore.entities.create
-- datastore.entities.delete
-- datastore.entities.get
-- datastore.entities.list
-- datastore.entities.update
-- datastore.indexes.create
-- datastore.indexes.delete
-- datastore.indexes.get
-- datastore.indexes.list
-- datastore.indexes.update
-- datastore.namespaces.get
-- datastore.namespaces.getIamPolicy
-- datastore.namespaces.list
-- datastore.statistics.get
-- datastore.statistics.list
 - deploymentmanager.compositeTypes.create
 - deploymentmanager.compositeTypes.delete
 - deploymentmanager.compositeTypes.get
@@ -1656,24 +1587,6 @@ includedPermissions:
 - monitoring.uptimeCheckConfigs.get
 - monitoring.uptimeCheckConfigs.list
 - monitoring.uptimeCheckConfigs.update
-- netappcloudvolumes.activeDirectories.create
-- netappcloudvolumes.activeDirectories.delete
-- netappcloudvolumes.activeDirectories.get
-- netappcloudvolumes.activeDirectories.list
-- netappcloudvolumes.activeDirectories.update
-- netappcloudvolumes.ipRanges.list
-- netappcloudvolumes.regions.list
-- netappcloudvolumes.serviceLevels.list
-- netappcloudvolumes.snapshots.create
-- netappcloudvolumes.snapshots.delete
-- netappcloudvolumes.snapshots.get
-- netappcloudvolumes.snapshots.list
-- netappcloudvolumes.snapshots.update
-- netappcloudvolumes.volumes.create
-- netappcloudvolumes.volumes.delete
-- netappcloudvolumes.volumes.get
-- netappcloudvolumes.volumes.list
-- netappcloudvolumes.volumes.update
 - orgpolicy.policy.get
 - proximitybeacon.attachments.create
 - proximitybeacon.attachments.delete
@@ -1752,8 +1665,6 @@ includedPermissions:
 - remotebuildexecution.workerpools.update
 - resourcemanager.projects.get
 - resourcemanager.projects.getIamPolicy
-- resourcemanager.projects.list
-- resourcemanager.projects.move
 - resourcemanager.projects.update
 - run.configurations.get
 - run.configurations.list
@@ -1762,7 +1673,6 @@ includedPermissions:
 - run.revisions.get
 - run.revisions.list
 - run.routes.get
-- run.routes.invoke
 - run.routes.list
 - run.services.create
 - run.services.delete
@@ -1788,23 +1698,6 @@ includedPermissions:
 - runtimeconfig.waiters.get
 - runtimeconfig.waiters.list
 - runtimeconfig.waiters.update
-- securitycenter.assets.group
-- securitycenter.assets.list
-- securitycenter.assets.listAssetPropertyNames
-- securitycenter.assets.runDiscovery
-- securitycenter.assetsecuritymarks.update
-- securitycenter.findings.group
-- securitycenter.findings.list
-- securitycenter.findings.listFindingPropertyNames
-- securitycenter.findings.setState
-- securitycenter.findings.update
-- securitycenter.findingsecuritymarks.update
-- securitycenter.organizationsettings.get
-- securitycenter.organizationsettings.update
-- securitycenter.sources.get
-- securitycenter.sources.getIamPolicy
-- securitycenter.sources.list
-- securitycenter.sources.update
 - servicebroker.bindingoperations.get
 - servicebroker.bindingoperations.list
 - servicebroker.bindings.create
@@ -1833,9 +1726,6 @@ includedPermissions:
 - serviceconsumermanagement.tenancyu.delete
 - serviceconsumermanagement.tenancyu.list
 - serviceconsumermanagement.tenancyu.removeResource
-- servicemanagement.consumerSettings.get
-- servicemanagement.consumerSettings.list
-- servicemanagement.consumerSettings.update
 - servicemanagement.services.bind
 - servicemanagement.services.check
 - servicemanagement.services.create
@@ -1873,9 +1763,7 @@ includedPermissions:
 - source.repos.get
 - source.repos.getIamPolicy
 - source.repos.list
-- source.repos.update
 - spanner.databaseOperations.cancel
-- spanner.databaseOperations.delete
 - spanner.databaseOperations.get
 - spanner.databaseOperations.list
 - spanner.databases.beginOrRollbackReadWriteTransaction
@@ -1888,7 +1776,6 @@ includedPermissions:
 - spanner.databases.list
 - spanner.databases.read
 - spanner.databases.select
-- spanner.databases.update
 - spanner.databases.updateDdl
 - spanner.databases.write
 - spanner.instanceConfigs.get
@@ -1964,3 +1851,4 @@ includedPermissions:
 - vpcaccess.locations.list
 - vpcaccess.operations.get
 - vpcaccess.operations.list
+etag: BwWTBWgslWk=
