Allow changing the project from CLI when deploying Gubernator

--- a/ci/gubernator/Makefile
+++ b/ci/gubernator/Makefile
@@ -12,7 +12,8 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-SRC := test-infra/gubernator
+PROJECT ?= knative-tests
+SRC     := test-infra/gubernator
 
 deploy:
 	# Fetch latest source, patch for our instance
@@ -27,7 +28,7 @@ deploy:
 	sed -i -e 's/k8s-testgrid.appspot.com/testgrid.knative.dev/' $(SRC)/filters.py
 	sed -i -e 's/k8s-testgrid/knative-testgrid/' $(SRC)/testgrid.py
 	# Deploy
-	make -C ../prow get-cluster-credentials
-	PROJECT=knative-tests make -C $(SRC) deploy
+	make -C ../prow get-cluster-credentials PROJECT=$(PROJECT)
+	make -C $(SRC) deploy PROJECT=$(PROJECT)
 	# Cleanup
 	rm -fr test-infra
