Add pubsub labels to monitor jobs

--- a/ci/prow/config.yaml
+++ b/ci/prow/config.yaml
@@ -5585,6 +5585,10 @@ periodics:
       - "--cov-threshold-percentage=50"
 - cron: "0 19 * * 1"
   name: ci-knative-cleanup
+  labels:
+      prow.k8s.io/pubsub.project: knative-tests
+      prow.k8s.io/pubsub.topic: knative-monitoring
+      prow.k8s.io/pubsub.runID: ci-knative-cleanup
   agent: kubernetes
   decorate: true
   decoration_config:
@@ -5615,6 +5619,10 @@ periodics:
         secretName: test-account
 - cron: "0 12 * * *"
   name: ci-knative-flakes-reporter
+  labels:
+      prow.k8s.io/pubsub.project: knative-tests
+      prow.k8s.io/pubsub.topic: knative-monitoring
+      prow.k8s.io/pubsub.runID: ci-knative-flakes-reporter
   agent: kubernetes
   decorate: true
   extra_refs:
@@ -5653,6 +5661,10 @@ periodics:
         secretName: flaky-test-reporter-slack-token
 - cron: "0 * * * *"
   name: ci-knative-flakes-resultsrecorder
+  labels:
+      prow.k8s.io/pubsub.project: knative-tests
+      prow.k8s.io/pubsub.topic: knative-monitoring
+      prow.k8s.io/pubsub.runID: ci-knative-flakes-reporter
   agent: kubernetes
   decorate: true
   extra_refs:
